--- a/user/Sidebar.html
+++ b/user/Sidebar.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <title>Footer</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="../Css/user.css" rel="stylesheet">
+  <title>Sidebar Menu</title>
 </head>
-<body>
- <aside>
-    <h3>Menu</h3>
-    <nav>
-      <a href="dashboard.html" target="_parent">Dashboard</a><br><br>
-      <a href="register.html" target="_parent">Register Event</a><br><br>
-      <a href="viewevents.html" target="_parent">View Events</a><br><br>
-      <a href="calenderuser.html" target="_parent">Calendar</a><br><br>
-      <a href="../Guest/guestpage.html" target="_parent">Logout</a>
+<body >
+
+  <!-- Toggle button -->
+  <button class="toggle-btn" id="toggleSidebar">☰ Menu</button>
+
+  <aside class="sidebar" id="sidebar">
+    <h2 class="logo"></h2>
+    <nav class="menu">
+      <a href="dashboard.html" target="_parent" class="active">Dashboard</a>
+      <a href="register.html" target="_parent">Register Event</a>
+      <a href="viewevents.html" target="_parent">View Events</a>
+      <a href="calenderuser.html" target="_parent">Calendar</a>
+      <a href="../index.html" target="_parent" class="logout">Logout</a>
     </nav>
   </aside>
+
+  <script>
+    const toggleBtn = document.getElementById('toggleSidebar');
+    const sidebar = document.getElementById('sidebar');
+
+    toggleBtn.addEventListener('click', () => {
+      sidebar.classList.toggle('show');
+      document.body.classList.toggle('sidebar-open');
+    });
+  </script>
+
 </body>
 </html>
+
+
+
+
