--- a/user/dashboard.html
+++ b/user/dashboard.html
@@ -1,146 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>View All Events - University Event Management Portal</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <title>User Dashboard</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- External Theme CSS -->
+  <link rel="stylesheet" href="../Css/user.css">
 </head>
 <body>
-    <header>
-      <iframe src="header.html" frameborder="0" width="100%" height="200"></iframe>
-    </header>
+  <!-- ===== HEADER ===== -->
+  <iframe src="header.html" frameborder="0" width="100%" height="120" ></iframe>
 
-  <h1>University Event Management Portal - User</h1>
-    <section>
-     <iframe src="sidebar.html" frameborder="0" width="200" height="500"></iframe>
-    </section>
+  <!-- ===== LAYOUT ===== -->
+  <div class="layout-container">
+    <!-- Sidebar -->
+    <div class="sidebar-frame">
+      <iframe src="sidebar.html" frameborder="0" width="100%" height="1300" ></iframe>
+    </div>
+    <!-- Main Content -->
+    <main class="main-content">
+      <h1 class="page-title">My Dashboard</h1>
+      <p class="text-center mb-4">Welcome back! Here is an overview of your registered events.</p>
 
-  <div>
-
-    <main>
-
-      <h2>My Dashboard</h2>
-      <p>Welcome back! Here is an overview of your registered events.</p>
-
-      <section>
-        <div>
-          <h3>Total Events</h3>
-          <p>6</p>
+      <!-- ===== Stats Section ===== -->
+      <section class="stats-section">
+        <div class="card stat-card">
+          <h3>Total Events</h3><p>0</p>
         </div>
-        <div>
-          <h3>Accepted</h3>
-          <p>3</p>
+        <div class="card stat-card">
+          <h3>Accepted</h3><p>0</p>
         </div>
-        <div>
-          <h3>Pending</h3>
-          <p>2</p>
+        <div class="card stat-card">
+          <h3>Pending</h3><p>0</p>
         </div>
-        <div>
-          <h3>Rejected</h3>
-          <p>1</p>
+        <div class="card stat-card">
+          <h3>Rejected</h3><p>0</p>
         </div>
       </section>
 
-      <br>
+      <!-- ===== Event Table Section ===== -->
+      <section class="mt-4 event-table-section">
+        <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap">
+          <h3>My Events</h3>
 
-      <!-- Table of Events -->
-      <section>
-        <h3>My Events</h3>
-        <table >
-          <tr>
-            <th>#</th>
-            <th>Event Name</th>
-            <th>Date</th>
-            <th>Hall</th>
-            <th>Status</th>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>Annual Scientific Day</td>
-            <td>22 Nov 2025</td>
-            <td>Room 5</td>
-            <td>Accepted</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Charity Iftar Event</td>
-            <td>10 Dec 2025</td>
-            <td>Gaming Hall</td>
-            <td>Pending</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>LIMU Founding Day</td>
-            <td>5 Jan 2026</td>
-            <td>Room 14</td>
-            <td>Accepted</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Madical Education Conference</td>
-            <td>15 Feb 2026</td>
-            <td>Main hall</td>
-            <td>Rejected</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Orientation week</td>
-            <td>10 Mar 2026</td>
-            <td>Room 3</td>
-            <td>Pending</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>Student Art Gallery</td>
-            <td>25 Apr 2026</td>
-            <td>Pbl 23</td>
-            <td>Accepted</td>
-          </tr>
-        </table>
+          <!-- Filter Dropdown -->
+          <div class="filter-box mt-2 mt-md-0">
+            <label for="statusFilter" class="me-2 fw-bold">Filter by Status:</label>
+            <select id="statusFilter" class="form-select form-select-sm d-inline-block" style="width:150px;">
+              <option value="all" selected>All</option>
+              <option value="accepted">Accepted</option>
+              <option value="pending">Pending</option>
+              <option value="rejected">Rejected</option>
+            </select>
+          </div>
+        </div>
+
+        <!-- Events Table -->
+        <div class="table-responsive">
+          <table id="eventsTable" class="table table-striped table-bordered text-center">
+            <thead class="table-header">
+              <tr>
+                <th onclick="sortTable(0)">#</th>
+                <th onclick="sortTable(1)">Event Name</th>
+                <th onclick="sortTable(2)">Date</th>
+                <th onclick="sortTable(3)">Hall</th>
+                <th onclick="sortTable(4)">Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><td>1</td><td>Annual Scientific Day</td><td>22 Nov 2025</td><td>Room 5</td><td>Accepted</td></tr>
+              <tr><td>2</td><td>Charity Iftar Event</td><td>10 Dec 2025</td><td>Gaming Hall</td><td>Rejected</td></tr>
+              <tr><td>3</td><td>LIMU Founding Day</td><td>5 Jan 2026</td><td>Room 14</td><td>Accepted</td></tr>
+              <tr><td>4</td><td>Medical Education Conference</td><td>15 Feb 2026</td><td>Main Hall</td><td>Rejected</td></tr>
+              <tr><td>5</td><td>Orientation Week</td><td>10 Mar 2026</td><td>Room 3</td><td>Accepted</td></tr>
+              <tr><td>6</td><td>Student Art Gallery</td><td>25 Apr 2026</td><td>PBL 23</td><td>Accepted</td></tr>
+            </tbody>
+          </table>
+        </div>
       </section>
 
-      <br>
-
-      <section>
+      <!-- ===== Calendar Section ===== -->
+      <section class="calendar-section mt-5">
         <h3>Event Calendar</h3>
-        <table>
-          <tr>
-            <th>Sun</th>
-            <th>Mon</th>
-            <th>Tue</th>
-            <th>Wed</th>
-            <th>Thu</th>
-            <th>Fri</th>
-            <th>Sat</th>
-          </tr>
-          <tr>
-            <td></td><td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td>
-          </tr>
-          <tr>
-            <td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td>
-          </tr>
-          <tr>
-            <td>13</td><td>14</td><td>15</td><td>16</td><td>17</td><td>18</td><td>19</td>
-          </tr>
-          <tr>
-            <td>20</td><td>21</td><td>22<br><small>Tech Talk</small></td><td>23</td><td>24</td><td>25</td><td>26</td>
-          </tr>
-          <tr>
-            <td>27</td><td>28</td><td>29</td><td>30</td><td>31</td><td></td><td></td>
-          </tr>
-        </table>
+        <div class="table-responsive">
+          <table id="calendarTable" class="table table-bordered text-center">
+            <thead>
+              <tr>
+                <th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th>
+                <th>Thu</th><th>Fri</th><th>Sat</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><td></td><td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>
+              <tr><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td></tr>
+              <tr><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td><td>18</td><td>19</td></tr>
+              <tr><td>20</td><td>21</td><td>22<br><small>Annual Scientific Day</small></td><td>23</td><td>24</td><td>25</td><td>26</td></tr>
+              <tr><td>27</td><td>28</td><td>29</td><td>30</td><td>31</td><td></td><td></td></tr>
+            </tbody>
+          </table>
+        </div>
       </section>
-
     </main>
-
   </div>
 
-  <footer>
-    <iframe src="footer.html" frameborder="0" width="100%" height="80"></iframe>
-  </footer>
+  <!-- ===== FOOTER ===== -->
+  <iframe src="footer.html" frameborder="0" width="100%" height="80"></iframe>
 
+  <!-- ===== JS ===== -->
+  <script src="../JS/dashboard.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
