--- a/user/login.html
+++ b/user/login.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <title>University Event Management Portal | Login</title>
 
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- External CSS -->
+  <link rel="stylesheet" href="../Css/auth.css">
 </head>
 <body>
-  <h1>Login Page</h1>
-<Header>
-  <nav>
-    <a href="../index.html">Back to Home Page</a>
-  </nav>
-</Header>
-
-  <h2>Login</h2>
-
-  <form action="Dashboarduser.html" method="post">
-    <label>Email:</label><br>
-    <input type="email" name="email" required><br><br>
-
-    <label>Password:</label><br>
-    <input type="password" name="password" required><br><br>
 
 
-    <button type="submit">Login</button>
-  </form>
 
-  <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+  <div class="container">
+    <!-- Left side (Welcome message) -->
+    <div class="welcome-section">
+      <h2>Hello, Welcome!</h2>
+      <p>Don’t have an account?</p>
+      <button onclick="window.location.href='signup.html'">Register</button>
+    </div>
 
-  <footer>
-    <p>© 2025 University Event Management Portal</p>
-  </footer>
+    <!-- Right side (Login form) -->
+    <div class="form-section">
+      <h2>Login</h2>
+      <form id="loginForm" action="dashboard.html" method="post">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+
+        <button type="submit">Login</button>
+      </form>
+      <p><a href="#">Forgot Password?</a></p>
+    </div>
+  </div>
+
+
+
+  <script src="../JS/auth.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
