--- a/user/signup.html
+++ b/user/signup.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <title>University Event Management Portal | Signup</title>
 
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- External CSS -->
+  <link rel="stylesheet" href="../Css/auth.css">
 </head>
 <body>
-<h1>Sign Up Page</h1>
-<header>
-  <nav>
-    <a href="../index.html">Back to Guest Page</a>
-  </nav>
-</header>
 
 
-  <h2>Create Account</h2>
 
-  <form action="Dashboarduser.html" method="post">
-    <label>Full Name:</label><br>
-    <input type="text" name="fullname" required><br><br>
+  <div class="container">
+    <!-- Left side -->
+    <div class="welcome-section">
+      <h2>Welcome Back!</h2>
+      <p>Already have an account?</p>
+      <button onclick="window.location.href='login.html'">Login</button>
+    </div>
 
-    <label>Email:</label><br>
-    <input type="email" name="email" required><br><br>
+    <!-- Right side (Signup form) -->
+    <div class="form-section">
+      <h2>Create Account</h2>
+      <form id="signupForm" action="dashboard.html" method="post">
+        <label for="fullname">Full Name:</label>
+        <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required>
 
-    <label>Password:</label><br>
-    <input type="password" name="password" required><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-    <label>Confirm Password:</label><br>
-    <input type="password" name="confirm_password" required><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Create password" required>
 
-    <button type="submit">Sign Up</button>
-  </form>
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="password" id="confirmPassword" name="confirm_password" placeholder="Confirm password" required>
 
-  <p>Already have an account? <a href="login.html">Login</a></p>
+        <button type="submit">Sign Up</button>
+      </form>
+    </div>
+  </div>
 
-  <footer>
-    <p>© 2025 University Event Management Portal</p>
-  </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="../JS/auth.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
