--- a/user/viewevents.html
+++ b/user/viewevents.html
@@ -1,121 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.rtl.min.css" integrity="sha384-CfCrinSRH2IR6a4e6fy2q6ioOX7O6Mtm1L9vRvFZ1trBncWmMePhzvafv7oIcWiW" crossorigin="anonymous">
-    <link rel="js" href="JS/script.js">
+  <title>View All Events - University Event Management Portal</title>
 
-    <title></title>
- </head>   
- <body>
-    <header>
-      <iframe src="header.html" frameborder="0" width="100%" height="200"></iframe>
-    </header>
-    <h1>University Event Management Portal - User</h1>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <section>
-      <iframe src="sidebar.html" frameborder="0" width="200" height="500"></iframe>
-    </section>
+  <!-- External Theme CSS -->
+  <link rel="stylesheet" href="../Css/user.css">
+</head>
+<body>
+  <!-- Header -->
+  <iframe src="header.html" frameborder="0" width="100%" height="120" scrolling="no"></iframe>
 
+  <!-- Layout Container -->
+  <div class="layout-container">
+    <!-- Sidebar -->
+    <iframe src="sidebar.html" class="sidebar-frame" frameborder="0"></iframe>
 
-    <main>
-      <h2>All University Events</h2>
-      <p>Below is a list of all events organized within the university.</p>
-<section>
-    <table>
-        <tr>
-          <th>Event Name</th>
-          <th>Organizer</th>
-          <th>Date</th>
-          <th>Hall</th>
-          <th>Status</th>
-          <th>Description</th>
-        </tr>
-        <tr>
-          <td>Annual Scientific Day</td>
-          <td>IT Department</td>
-          <td>22 Nov 2025</td>
-          <td>Room 5</td>
-          <td>Accepted</td>
-          <td>Showcases student projects and research in technology through presentations and workshops</td>
-        </tr>
-        <tr>
-          <td>Culture Day</td>
-          <td>Arts Department</td>
-          <td>25 Nov 2025</td>
-          <td>Pbl 23</td>
-          <td>Pending</td>
-          <td>An event celebrating cultural diversity and artistic expression.</td>
-        </tr>
-        <tr>
-          <td>Science Exhibition</td>
-          <td>Science Faculty</td>
-          <td>Gaming hall</td>
-          <td>5 Dec 2025</td>
-          <td>Rejected</td>
-          <td>Presentation of student science projects and innovations.</td>
-        </tr>
-        <tr>
-          <td>Charity Iftar Event</td>
-          <td>Students</td>
-          <td>10 Dec 2025</td>
-          <td>Gaming Hall</td>
-          <td>Pending</td>
-          <td>A Ramadan gathering promoting community and charity among students and staff.</td>
-        </tr>
-          <td>LIMU Founding Day</td>
-          <td>University</td>
-          <td>5 Jan 2026</td>
-          <td>Room 14</td>
-          <td>Accepted</td>
-          <td>Celebrates the university's anniversary and honors its achievements and members</td>
-        </tr>
-        <tr>
-          <td>Orientation week</td>
-          <td>University</td>
-          <td>10 Mar 2026</td>
-          <td>Room 3</td>
-          <td>Welcomes new students with tours, activities, and information sessions.</td>
-        </tr>
-        <tr>
-          <td>Student Art Gallery</td>
-          <td>Students</td>
-          <td>25 Apr 2026</td>
-          <td>Pbl 23</td>
-          <td>Accepted</td>
-          <td>Exhibits student artwork and encourages creativity and cultural exchange.</td>
-        </tr>
-        <tr>
-          <td>Madical Education Conference</td>
-          <td>Faculty of Medicine</td>
-          <td>15 Feb 2026</td>
-          <td>Main hall</td>
-          <td>Rejected</td>
-          <td>Focuses on innovations and research in medical education and training.</td>
-        </tr>
-      </table>
+    <!-- Main Content -->
+    <main class="main-content">
+      <div class="container py-4">
+        <h3 class="mb-3">All University Events</h3>
+        <p class="text-muted text-center">Below is a list of all events organized within the university.</p>
 
-</section>
-      
-      <br>
-      <section>
-        <h3>Summary</h3>
-        <ul>
-          <li>Total Events: 8</li>
-          <li>Accepted: 4</li>
-          <li>Pending: 3</li>
-          <li>Rejected: 1</li>
-        </ul>
-      </section>
+        <!-- Filter will appear here dynamically -->
+        <section id="events-section" class="mt-4">
+          <div class="table-responsive">
+            <table class="table table-striped table-hover shadow-sm">
+              <thead class="table-header">
+                <tr>
+                  <th>Event Name</th>
+                  <th>Organizer</th>
+                  <th>Date</th>
+                  <th>Hall</th>
+                  <th>Status</th>
+                  <th>Description</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Web Design Workshop</td>
+                  <td>IT Department</td>
+                  <td>20 Oct 2025</td>
+                  <td>Gaming Hall</td>
+                  <td>Accepted</td>
+                  <td>Learn to create simple, responsive websites using HTML and CSS.</td>
+                </tr>
+                <tr>
+                  <td>AI & Data Science Seminar</td>
+                  <td>AI Program</td>
+                  <td>25 Oct 2025</td>
+                  <td>Room 14</td>
+                  <td>Accepted</td>
+                  <td>Explore the latest trends in artificial intelligence and data science.</td>
+                </tr>
+                <tr>
+                  <td>Annual Scientific Day</td>
+                  <td>IT Department</td>
+                  <td>22 Nov 2025</td>
+                  <td>Room 5</td>
+                  <td>Accepted</td>
+                  <td>Showcases student projects and research in technology.</td>
+                </tr>
+                <tr>
+                  <td>Culture Day</td>
+                  <td>Arts Department</td>
+                  <td>25 Nov 2025</td>
+                  <td>Pbl 23</td>
+                  <td>Pending</td>
+                  <td>An event celebrating cultural diversity and art.</td>
+                </tr>
+                <tr>
+                  <td>Science Exhibition</td>
+                  <td>Science Faculty</td>
+                  <td>5 Dec 2025</td>
+                  <td>Gaming Hall</td>
+                  <td>Accepted</td>
+                  <td>Presentation of student science projects and innovations.</td>
+                </tr>
+                <tr>
+                  <td>Charity Iftar Event</td>
+                  <td>Students</td>
+                  <td>10 Dec 2025</td>
+                  <td>Gaming Hall</td>
+                  <td>Rejected</td>
+                  <td>A Ramadan gathering promoting community and charity.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
 
-    </main> 
-    <script src="JS/script.js"></script>
-    <footer>
-        <iframe src="footer.html" frameborder="0" width="100%" height="80"></iframe>
-    </footer>
- </body>
+        <section class="mt-4 summary-card">
+          <h4 class="fw-bold mb-3">Summary</h4>
+          <ul>
+            <li>Total Events: <strong>10</strong></li>
+            <li>Accepted: <strong>7</strong></li>
+            <li>Pending: <strong>1</strong></li>
+            <li>Rejected: <strong>2</strong></li>
+          </ul>
+        </section>
+      </div>
+    </main>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <iframe src="footer.html" frameborder="0" width="100%" height="80"></iframe>
+  </footer>
+  <script src="../JS/ViewE.js"></script>
+</body>
 </html>
