--- a/user/Sidebar.html
+++ b/user/Sidebar.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../Css/user.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!-- Font Awesome CDN -->
   <title>Sidebar Menu</title>
 </head>
 <body >
@@ -14,11 +15,11 @@
   <aside class="sidebar" id="sidebar">
     <h2 class="logo"></h2>
     <nav class="menu">
-      <a href="dashboard.html" target="_parent" class="active">Dashboard</a>
-      <a href="register.html" target="_parent">Register Event</a>
-      <a href="viewevents.html" target="_parent">View Events</a>
-      <a href="calenderuser.html" target="_parent">Calendar</a>
-      <a href="../index.html" target="_parent" class="logout">Logout</a>
+      <a href="dashboard.html" target="_parent" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a> <!-- Dashboard icon -->
+      <a href="register.html" target="_parent"><i class="fas fa-pen-square"></i> Register Event</a> <!-- Register icon -->
+      <a href="viewevents.html" target="_parent"><i class="fas fa-calendar-check"></i> View Events</a> <!-- View Events icon -->
+      <a href="calenderuser.html" target="_parent"><i class="fas fa-calendar-alt"></i> Calendar</a> <!-- Calendar icon -->
+      <a href="../index.html" target="_parent" class="logout"><i class="fas fa-sign-out-alt"></i> Logout</a> <!-- Logout icon -->
     </nav>
   </aside>
 
@@ -34,6 +35,7 @@
 
 </body>
 </html>
+
 
 
 
