fixed the footer content

--- a/user/Footer.html
+++ b/user/Footer.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <footer class="main-footer">
-    <p>&copy; 2025 University Event Management Portal | All Rights Reserved</p>
+    <small>Team 8 — LIMU Event Management</small>
   </footer>
 </body>
 </html>
