comments added for clarification

--- a/admin/add_event.html
+++ b/admin/add_event.html
@@ -53,7 +53,7 @@
 
         <div class="form-actions">
           <button type="submit" class="btn small">Save Event</button>
-          <a href="index.html" class="btn small" style="background:transparent; color:var(--limu-blue); border-color:var(--limu-blue);">Back</a>
+          <a href="dashboard.html" class="btn small" style="background:transparent; color:var(--limu-blue); border-color:var(--limu-blue);">Back</a>
         </div>
       </form>
     </div>
