--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -58,7 +58,7 @@
             <header class="panel-header">
               <h3>Recent Events</h3>
               <div class="panel-actions">
-                <button class="btn small" id="addEventBtn" type="button">Add Event</button>
+                <a href="add_event.html"><button class="btn small" id="addEventBtn" type="button">Add Event</button></a>
 
                 <div id="filter">
                   <label for="filterSelect">Filter by:</label>
