--- a/admin/halls.html
+++ b/admin/halls.html
@@ -23,7 +23,7 @@
                     <!-- filled by JS -->
                 </tbody>
             </table>
-            <button class="btn small" id="hall-btn">add hall</button>
+            <a href="add_halls.html"><button class="btn small" id="hall-btn">add hall</button></a>
         </main>
         
         <div data-include="components/footer.html"></div>
